added santocafeto.html, about.html and changed collab button

--- a/style.css
+++ b/style.css
@@ -55,10 +55,15 @@ h6 {
 }
 
 #intro {
-    padding-top: 80px;
+    padding-top: 70px;
 }
 
 .margen {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.img-margen {
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -71,9 +76,15 @@ h6 {
         padding: 10px 20px;
         border: 1px solid #fff;
     }
+
     .margen {
         margin-left: 3%;
         margin-right: 3%;
+    }
+
+    .img-margen {
+        margin-left: 0%;
+        margin-right: 0%;
     }
 }
 
@@ -137,6 +148,25 @@ h6 {
     background-size: cover;
     background-position: center;
 }
+
+#galeria .foto {
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+}
+
+/*//////////SESIONES////////*/
+/*******Santo Cafeto********/
+#galeria .sc1 {
+    background-image: url("./assets/img/sc1.jpg");
+}
+
+#galeria .sc2 {
+    background-image: url("./assets/img/sc2.jpg");
+}
+
+/*******Fin Santo Cafeto********/
+
 
 #galeria .project .img-1 {
     background-image: url("./assets/img/sccover.jpg");
@@ -217,4 +247,28 @@ footer .copyright {
 
 .sans {
     font-family: 'Work Sans', sans-serif !important;
+}
+
+.boton {
+    border: 1px solid #00000033;
+    background-color: #fff;
+    color: black !important;
+    padding-top: 2px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.boton:hover {
+    animation: pulse;
+    animation-duration: 1s;
+}
+
+.sticky-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 15px;
+    z-index: 1;
 }
