--- a/style.css
+++ b/style.css
@@ -31,8 +31,13 @@ h6 {
     margin-top: 10px;
 }
 
-.container-fluid {
+.fadeinup {
     animation: fadeInUp;
+    animation-duration: 2s;
+}
+
+.fadein {
+    animation: fadeIn;
     animation-duration: 2s;
 }
 
@@ -150,7 +155,7 @@ h6 {
 }
 
 #galeria .foto {
-    height: 400px;
+    height: 350px;
     background-size: cover;
     background-position: center;
 }
