--- a/style.css
+++ b/style.css
@@ -31,14 +31,15 @@ h6 {
     margin-top: 10px;
 }
 
-.fadeinup {
-    animation: fadeInUp;
+.fadeindown {
+    animation: fadeInDown;
     animation-duration: 2s;
 }
 
 .fadein {
     animation: fadeIn;
     animation-duration: 2s;
+
 }
 
 #hero {
