edited back to home button

--- a/style.css
+++ b/style.css
@@ -277,23 +277,22 @@ footer .copyright {
 }
 
 .sticky-btn {
+
     position: fixed;
-    bottom: 20px;
-    right: 15px;
+    bottom: 0px;
+    right: 0px;
     z-index: 1;
-    border: 1px solid #00000033;
-    background-color: #fff;
-    color: black !important;
+    background-color: #f4f2f5;
+    color: #5F00BA!important;
     padding-top: 2px;
     padding-bottom: 5px;
     padding-left: 15px;
     padding-right: 15px;
     text-align: center;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'Work Sans', sans-serif !important;
 }
 
 .sticky-btn:hover {
-    border: none;
     background-color: #5F00BA;
     color: white !important;
 }
