fixed caps problem in rabia cafe photo extensions (JPG)

--- a/style.css
+++ b/style.css
@@ -351,11 +351,11 @@ footer .copyright {
 /*******Rabia Cafe********/
 
 #galeria .rc1 {
-    background-image: url("./assets/img/rc1.jpg");
+    background-image: url("./assets/img/rc1.JPG");
 }
 
 #galeria .rc2 {
-    background-image: url("./assets/img/rc2.jpg");
+    background-image: url("./assets/img/rc2.JPG");
 }
 
 #galeria .rc3 {
@@ -363,23 +363,23 @@ footer .copyright {
 }
 
 #galeria .rc4 {
-    background-image: url("./assets/img/rc4.jpg");
+    background-image: url("./assets/img/rc4.JPG");
 }
 
 #galeria .rc5 {
-    background-image: url("./assets/img/rc5.jpg");
+    background-image: url("./assets/img/rc5.JPG");
 }
 
 #galeria .rc6 {
-    background-image: url("./assets/img/rc6.jpg");
+    background-image: url("./assets/img/rc6.JPG");
 }
 
 #galeria .rc7 {
-    background-image: url("./assets/img/rc7.jpg");
+    background-image: url("./assets/img/rc7.JPG");
 }
 
 #galeria .rc8 {
-    background-image: url("./assets/img/rc8.jpg");
+    background-image: url("./assets/img/rc8.JPG");
 }
 
 /*******Fin Rabia Cafe********/
